# ws02_robot

src/: Eular_cal.py  point.py  simple_cli.py
src/collision_object_manager_cpp/: CMakeLists.txt  package.xml
src/collision_object_manager_cpp/meshes/: Mini_Cooper_Simplified.stl
src/collision_object_manager_cpp/src/: collision_object_manager_node.cpp
src/demo_kuka_controller/: CMakeLists.txt  package.xml
src/demo_kuka_controller/src/: kuka_moveit_control.cpp
src/display_kuka_kr210_rviz/: CMakeLists.txt  package.xml
src/display_kuka_kr210_rviz/meshes/: kr210_base_link.STL  kr210_link1.STL  kr210_link2.STL  kr210_link3.STL  kr210_link4.STL  kr210_link5.STL  kr210_link6.STL
src/display_kuka_kr210_rviz/urdf/: KR210_R2700_extra_modified.SLDASM.urdf
src/fake_tcp_CartesianFollow/: package.xml  setup.cfg  setup.py
src/fake_tcp_cartesian_follow/: package.xml  setup.cfg  setup.py
src/fake_tcp_cartesian_follow/fake_tcp_cartesian_follow/: follow_node.py
src/fake_tcp_collision/: package.xml  setup.cfg  setup.py
src/fake_tcp_collision/fake_tcp_collision/: fake_tcp_node.py
src/fake_tcp_scene_manager/: package.xml  setup.cfg  setup.py
src/fake_tcp_scene_manager/fake_tcp_scene_manager/: scene_manager_node.py
src/infinite_path_trail/: package.xml  setup.cfg  setup.py
src/infinite_path_trail/infinite_path_trail/: infinite_path_publisher.py
src/kuka_communication_client/: package.xml  setup.cfg  setup.py
src/kuka_communication_client/csv/: 1.csv  traj.csv
src/kuka_communication_client/kuka_communication_client/: cartesian_follow_action_client.py  pose_check_action_client.py
src/kuka_communication_server/: CMakeLists.txt  package.xml
src/kuka_communication_server/src/: cartesian_follow_action_server.cpp  pose_check_action_server.cpp
src/kuka_interfaces/: CMakeLists.txt  package.xml
src/kuka_interfaces/action/: CartesianFollow.action  CheckPose.action
src/kuka_interfaces/srv/: ExecuteGoal.srv  UpdateCollisionObjectPose.srv
src/kuka_kr210_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/kuka_kr210_moveit_config/config/: KR210_R2700_extra.ros2_control.xacro  KR210_R2700_extra.srdf  KR210_R2700_extra.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/kuka_kr210_moveit_config/launch/: demo.launch.py  final.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/kuka_tf_initializer/: package.xml  setup.cfg  setup.py
src/kuka_tf_initializer/kuka_tf_initializer/: kuka_tf_initializer.py
src/robot_tf_broadcaster/: package.xml  setup.cfg  setup.py
src/robot_tf_broadcaster/robot_tf_broadcaster/: robot_tf_broadcaster.py
src/trac_ik_kinematics/trac_ik_kinematics_plugin/src/: trac_ik_kinematics_plugin.cpp
