<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>collision_object_manager_cpp</name>
  <version>0.0.0</version>
  <description>服务端节点：加载/刷新/删除 MoveIt 碰撞物体</description>
  <maintainer email="pei_liu0913@163.com">liyq</maintainer>
  <license>MIT</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 编译和运行依赖 -->
  <depend>rclcpp</depend>
  <depend>control_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>Boost</depend>
  <depend>geometric_shapes</depend>
  <depend>ament_index_cpp</depend>
  <depend>kuka_interfaces</depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
