<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_kuka_controller</name>
  <version>0.0.0</version>
  <description>控制 KUKA 机械臂并利用 MoveIt进行路径规划</description>
  <maintainer email="pei_liu0913@163.com">liyq</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行时依赖 -->
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>ament_index_cpp</depend>
  <depend>kuka_interfaces</depend>

  <!-- 系统库依赖 -->
  <depend>boost_filesystem</depend>
  <depend>boost_system</depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
