<?xml version="1.0"?>
<package format="3">
  <name>kuka_interfaces</name>
  <version>0.1.0</version>
  <description>Custom action and service interfaces for KUKA motion control</description>

  <maintainer email="pei_liu0913@163.com">liyq</maintainer>
  <license>MIT</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 构建依赖 -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <!-- 运行时依赖 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- 导出依赖 -->
  <build_export_depend>rosidl_default_runtime</build_export_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
